crates/varyk/tests/snapshots/errors__v0200_error_in_a_dependency.snap
---
source: crates/varyk/tests/errors.rs
expression: without_version(& stderr)
---
error[V0200]: mismatched types: expected `i32`, found `string`
 --> units/src/lib.vr:2:5
  |
2 |     "one"
  |     ^^^^^ mismatched types: expected `i32`, found `string`
  |
  = note: in the package `units` 0.1.0, which this build uses
